--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     //ViewPager2
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
+
 
 
 }
