--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,6 @@ dependencies {
 
     implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
 
-
+    implementation 'com.github.Pfuster12:LiveChart:1.2.2'
 
 }
